--- a/index.html
+++ b/index.html
@@ -80,6 +80,17 @@
     </div>
 </section>
 
+<section class="youtube-section">
+    <div class="container">
+        <h2 class="section-title">Palestras ao vivo</h2>
+        <p class="section-description">Acompanhe todas as nossas palestras em tempo real através do YouTube. Inscreva-se agora e ative as notificações para não perder nenhuma transmissão!</p>
+        
+        <a href="https://youtube.com/@canalameuberaba7987?si=GKkXeVIuLS5F59PW" target="_blank" class="youtube-btn animate-pulse" id="youtubeBtn">
+            <i class="fab fa-youtube youtube-icon"></i>
+            Acessar o Canal
+        </a>
+    </div>
+</section>
 
 <section id="programacao" class="services-container">
     <h2 class="section-title">Programação</h2>
@@ -168,6 +179,48 @@
     
 </div>
 
+</section>
+
+<section class="hero">
+    <div class="hero-texto">
+        <br><br><br><br>
+        <h1 class="section-title">Perguntas Frequentes</h1>        
+    </div>
+    <div class="faq-container">
+        <div class="faq-item">
+            <div class="faq-question">Qual horário de abertura da portaria da João XXIII para chegada para a atividade de Yoga? <span class="faq-icon">+</span></div>
+            <div class="faq-answer">9h, acesso à entrada à Mata do Carrinho, onde será a atividade de Yoga.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">As atividades do Memorial Chico Xavier estarão funcionando normalmente no sábado?<span class="faq-icon">+</span></div>
+            <div class="faq-answer">Sim, das 10h30 às 16:30. Entrada permitida até às 16:00. Programe-se, o tempo médio de visitação é de uma hora. Para visitação, é necessário adquirir ingresso no site do Memorial: https://www.memorialchicoxavier.com/ .</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question">Onde ficarão os foodtrucks e praça de alimentação?<span class="faq-icon">+</span></div>
+            <div class="faq-answer">Área do estacionamento ao lado do palco.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question"> Qual o local e espaço onde ficará a Feira do Livro?<span class="faq-icon">+</span></div>
+            <div class="faq-answer">Hall entrada de acesso à exposição de longa permanência do Memorial.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question"> Qual o local e espaço onde ficará o stand da Feira de artesanato e Mostra de arte espírita?<span class="faq-icon">+</span></div>
+            <div class="faq-answer">A Feira de artesanato ficará na área de estacionamento ao lado dos foodtrucks  e a Mostra de arte espírita ficará na área ao fundo do Memorial (entre cantina e o auditório).</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question"> E as apresentações culturais?<span class="faq-icon">+</span></div>
+            <div class="faq-answer"> Serão realizadas na área estacionamento.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question"> Na entrada das atividades do auditório (documentário e palestras), haverá conferência de ingressos?<span class="faq-icon">+</span></div>
+            <div class="faq-answer"> Sim, monitores estarão na porta em mesa, para verificar o comprovante de ingressos das pessoas. Recomenda-se chegar pelo menos 20 minutos antes do início para evitar atrasos.</div>
+        </div>
+        <div class="faq-item">
+            <div class="faq-question"> Será permitida entrada de quem não adquiriu ingresso para os eventos previamente, mesmo que haja lugares vagos?<span class="faq-icon">+</span></div>
+            <div class="faq-answer"> Só será permitida entrada de quem adquiriu ingresso e mostrar comprovante.</div>
+        </div>
+        <p>Os organizadores e monitores voluntários estarão trajando camiseta uniformizada do Festival, com indicação de “Organização” nas costas.</p>
+    </div>
 </section>
 
 <!-- Seção Sobre -->
